--- a/.docker.env
+++ b/.docker.env
@@ -4,3 +4,5 @@ POSTGRES_PASSWORD=postgres
 SPECIAL_PASSWORD=12345
 POSTGRES_URL_TEST=postgresql+asyncpg://postgres:postgres@db:5432/postgrestest
 POSTGRES_DB=postgrestest
+REDIS_EXPIRE=60
+REDIS_URL=redis://cache:6379
