--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    restart: always
     container_name: mainapp-web
     ports:
       - 8000:8000
@@ -15,7 +14,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
+    command: sh -c "alembic upgrade head && python -m pytest -v && tail -f /dev/null"
 
   db:
     image: postgres:15.1-alpine
